# SproutEngine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  imgui.ini  test_blueprint.sp  vcpkg.json
assets/: Box.gltf  README.txt
assets/scripts/: Generated_FromGraph.lua  NewScript.sp  Rotate.lua  Rotate.sp
assets/shaders/: basic.frag  basic.vert
cmake/: CompileShaders.cmake
docs/: blueprints-engine-integration.md  blueprints-graph-spec.md  blueprints-user-guide.md  rfc-blueprints.md  rfc-sp-toolchain.md  sp-editor-usage.md  sp-engine-integration.md  sp-language.md
engine/Assets/: GltfLoader.cpp  GltfLoader.h
engine/Core/: Application.cpp  Application.h
engine/ECS/: Components.h  Systems.cpp  Systems.h
engine/Math/: Transform.h
engine/Platform/: Window.cpp  Window.h
engine/Render/: Renderer.cpp  Renderer.h
engine/Scene/: Scene.cpp  Scene.h
engine/Scripting/: ScriptSystem.cpp  ScriptSystem.h
samples/HelloSprout/: main.cpp
samples/Triangle/: main.cpp
scripts/: rotator.lua
shaders/: common.sh  fs_lit.sc  fs_solid.sc  vs_lit.sc  vs_solid.sc
src/: gizmo.rs  main.cpp  main.rs  main_new.cpp  material.rs  material.rs.backup  material_clean.rs  project.rs  viewport.rs
src/Engine/: Actor.cpp  Actor.h  Blueprint.cpp  Blueprint.h  BlueprintEditor.cpp  BlueprintEditor.h  BlueprintEditor_new.h  BlueprintEditor_old.h  Components.h  CoreComponents.cpp  CoreComponents.h  DockingManager.cpp  DockingManager.h  Editor.cpp  Editor.h  FbxImporter.cpp  FbxImporter.h  FileUtil.cpp  FileUtil.h  GameplayActors.cpp  GameplayActors.h  HUD.cpp  HUD.h  Model.h  ModernTheme.cpp  ModernTheme.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManipulator.cpp  SceneManipulator.h  ScriptEditor.cpp  ScriptEditor.h  Scripting.cpp  Scripting.h  SproutScript.h  Systems.cpp  Systems.h  Theme.cpp  (+12 more)
src/Engine/widgets/: SpCodeEditor.cpp  SpCodeEditor.h
