[package]
name = "sprout_engine"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"

[dependencies]
# Stable as of 2025-08; if you hit version conflicts, run `cargo update` or check the crates for the latest.
bevy = { version = "0.15", default-features = true }
bevy_egui = "0.31"
