[package]
name = "sprout_engine_unified_fbx"
version = "0.3.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"

[dependencies]
bevy = { version = "0.10", default-features = true, features = ["bevy_animation"] }
bevy_egui = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_mod_fbx = "0.4" # compatible with Bevy 0.10
